[package]
name = "iced-resizable-split"
version = "1.0.0"
edition = "2024"

description = "Resizable Horizontal and Vertical split for iced crate"
license = "MIT"

authors = ["Mikolaj Kozlowski <kozlowski.g.mikolaj@gmail.com>"]
documentation = "https://docs.rs/iced-resizable-split"
repository = "https://github.com/its-wasabi/iced-resizable-split"
readme = "README.md" 
keywords = ["iced",  "iced-rs", "gui", "widget"]
categories = ["graphics"]

[features]
advanced = []

[dependencies]
iced_core = "0.14.0"
